# ALLEGRO

./: .gitattributes  .gitignore  305_train_ncbi_log.txt  README.md  a1_all_without_soi.ipynb  a1_pareto.py  a1_train_test.py  a7_all_without_soi.ipynb  a7_train_test.py  all_pareto.py  bitset_test  bitset_test.cpp  config.yaml  e1_100_runs.py  e1_all_without_soi.ipynb  e1_pareto.py  e1_train_test.py  experiments_ran.txt  lib_guides_targets.csv  lol.csv  more_trials_exp_runner.py  pareto_experiment_runner.py  species_increment_exp_runner.py  temp_config.yaml  test.ipynb  train_test.ipynb  train_test.py
src/coverset_parsers/: CMakeLists.txt  Makefile  coverset.cpp  coverset.pyx  coversets_ram.py  lol  lol.cpp  sandbox  sandbox.cpp
src/coverset_parsers/include/allegro/: coverset.h
src/coverset_parsers/include/scip/: config.h
src/coverset_parsers/lib/: libortools_flatzinc.so.9
src/coverset_parsers/lib/pkgconfig/: absl_any.pc  absl_atomic_hook.pc  absl_bad_variant_access.pc  absl_base_internal.pc  absl_bind_front.pc  absl_bits.pc  absl_city.pc  absl_cleanup_internal.pc  absl_compressed_tuple.pc  absl_config.pc  absl_container_memory.pc  absl_cord.pc  absl_cord_internal.pc  absl_cordz_functions.pc  absl_cordz_handle.pc  absl_cordz_info.pc  absl_cordz_statistics.pc  absl_cordz_update_scope.pc  absl_cordz_update_tracker.pc  absl_core_headers.pc  absl_counting_allocator.pc  absl_debugging.pc  absl_debugging_internal.pc  absl_dynamic_annotations.pc  absl_errno_saver.pc  absl_exponential_biased.pc  absl_failure_signal_handler.pc  absl_fast_type_id.pc  absl_flags_internal.pc  absl_flags_parse.pc  absl_flags_path_util.pc  absl_flags_private_handle_accessor.pc  absl_flags_reflection.pc  absl_flags_usage.pc  absl_function_ref.pc  absl_graphcycles_internal.pc  absl_hash.pc  absl_hash_function_defaults.pc  absl_hashtable_debug.pc  absl_hashtablez_sampler.pc  (+40 more)
src/cython_libs/: CMakeLists.txt  Makefile  README.md  coverset2.cpp  coverset2.pyx  decode_bitset.cpp  decorators.cpp  ilp_approximators.cpp  ilp_approximators_old.cpp  kirschtorte.cpp  kirschtorte.pyx  logger.cpp  rammingstone.cpp  rammingstone.pyx
src/cython_libs/include/allegro/: coverset.h  coverset2.h  decode_bitset.h  decorators.h  definitions.h  guide_struct.h  ilp_approximators.h  kirschtorte.h  logger.h  rammingstone.h
src/cython_libs/lib/: libortools.so.9  libortools_flatzinc.so.9
src/cython_libs/lib/pkgconfig/: absl_algorithm.pc  absl_algorithm_container.pc  absl_any_invocable.pc  absl_bad_any_cast.pc  absl_bad_any_cast_impl.pc  absl_bad_optional_access.pc  absl_base.pc  absl_btree.pc  absl_civil_time.pc  absl_cleanup.pc  absl_compare.pc  absl_container_common.pc  (+47 more)
(+3076 files in other folders)
